--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "publish": "expo publish"
+    "publish": "expo publish",
+    "deploy": "npx eas update --branch main"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
